# TrabalhoDiscreta2

./: CMakeLists.txt  README  README.md  plot.py  resultados_SIR.csv  resultados_SIS.csv
Resultados/: Condensation_graph_SEIR.txt  cfc_members_SEIR.txt  cfc_members_SIR.txt  cfc_members_SIS.txt  condensation_graph_SIR.txt  condensation_graph_SIS.txt  grafo_cidade.txt  resultados_SEIR.csv  resultados_SIR.csv  resultados_SIS.csv
include/: Commons.h  DirectedGraph.h  Graph.h  Simulation.h  Tarjan.h  WattsStrogratzGenerator.h
src/: Graph.cpp  Simulation.cpp  Tarjan.cpp  WattsStrogratzGenerator.cpp  main.cpp
